--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "./node_modules/.bin/ember build",
     "lint": "./node_modules/.bin/sass-lint",
     "esfix": "./node_modules/.bin/eslint src --fix && ./node_modules/.bin/eslint tests --fix",
-    "deploy": "ember build && surge dist boone-portfolio.surge.sh"
+    "deploy": "ember build && surge dist chrisboone.me"
   },
   "author": "",
   "license": "ISC",
