--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "./node_modules/.bin/ember build",
     "lint": "./node_modules/.bin/sass-lint",
     "esfix": "./node_modules/.bin/eslint src --fix && ./node_modules/.bin/eslint tests --fix",
-    "deploy": "ember build -e production && surge dist chrisboone.me"
+    "deploy": "ember build -e production"
   },
   "author": "",
   "license": "ISC",
@@ -19,15 +19,6 @@
     "yoga-sass": "^1.0.1"
   },
   "devDependencies": {
-    "broccoli": "^0.16.9",
-    "broccoli-babel-transpiler": "^5.5.0",
-    "broccoli-cli": "^1.0.0",
-    "broccoli-funnel": "^1.0.1",
-    "broccoli-inject-livereload": "^0.2.0",
-    "broccoli-merge-trees": "^1.1.1",
-    "broccoli-sass-source-maps": "^1.6.0",
-    "broccoli-sourcemap-concat": "^1.1.6",
-    "broccoli-stew": "^1.2.0",
     "ember-cli": "^2.4.2",
     "eslint": "^2.4.0",
     "eslint-config-rtablada": "^1.0.0",
